Update debugging configs

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,5 @@
+ARG WORKSPACE_FOLDER=/workspaces/hsswiki-azureswa
+
 # This image includes git, nvm, pipx, zsh, omz, sudo-able vscode user, etc.
 #   Tag list: https://mcr.microsoft.com/v2/devcontainers/python/tags/list
 #   Doc: https://github.com/devcontainers/images/tree/main/src/python
@@ -21,21 +23,22 @@ RUN NODE_VERSION=18.20.8 && \
     [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
     nvm install $NODE_VERSION
 
-WORKDIR /app
-
 # Install local testing dependencies
-# RUN npm install -g @azure/static-web-apps-cli@2.0.4
+RUN sudo apt-get update && sudo apt-get install -y libsecret-1-dev
+# To fix potential "npm error Package libsecret-1 was not found"
+RUN npm install -g @azure/static-web-apps-cli@2.0.4
 
-# Install backend dependencies
-COPY ../api/requirements.txt .
-RUN pip3 \
-    --disable-pip-version-check \
-    # --no-cache-dir \
-    install -r requirements.txt
-
-# Install frontend dependencies
+# Install frontend dependencies in WORKSPACE_FOLDER/node_modules/
+WORKDIR ${WORKSPACE_FOLDER}
 COPY package*.json .
 RUN npm install
 
-
-
+# Install backend dependencies in WORKSPACE_FOLDER/api/.venv/
+WORKDIR ${WORKSPACE_FOLDER}/api
+RUN python3 -m venv .venv
+COPY ../api/requirements.txt .
+RUN . .venv/bin/activate && \
+    pip3 \
+    --disable-pip-version-check \
+    # --no-cache-dir \
+    install -r requirements.txt
