--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^2.9.3",
     "gh-pages": "^2.1.1",
     "node-fetch": "^2.6.0",
+    "popup-chat-react": "^1.0.5",
     "prettier-package-json": "^2.1.3",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.16",
