--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,4 +2,14 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
-azure-functions
+azure-functions==1.22.1
+pydantic==2.11.1
+pydantic-settings==2.8.1
+langchain==0.3.22
+langchain-community==0.3.20
+azure-identity==1.19.0
+azure-search-documents==11.4.0
+chromadb==0.6.3
+litellm==1.56.6
+# sentence-transformers==4.0.1
+# langchain-chroma==0.2.2
