--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,8 +3,9 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions==1.22.1
-pydantic==2.11.1
-pydantic-settings==2.8.1
+pydantic==2.10.6
+pydantic-settings==2.7.1
+# Azure SWA builder's pydantic version is up to 2.10.6 as of 2025-04-03
 langchain==0.3.22
 langchain-community==0.3.20
 azure-identity==1.19.0
