Add back essential python deps

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,17 +6,21 @@
 
 azure-functions==1.22.1
 
+# Azure SWA builder's pydantic version is up to 2.10.6 as of 2025-04-03
 pydantic
 pydantic-settings
 
-# py3.8 deps
-# pydantic==2.10.6
+langchain
+# langchain-community
 
-# Latest deps
-# pydantic==2.11.1
+azure-identity
+azure-search-documents
+# chromadb==0.5.23
+litellm
+# sentence-transformers==4.0.1
+# langchain-chroma==0.2.2
 
-# pydantic-settings==2.7.1
-# Azure SWA builder's pydantic version is up to 2.10.6 as of 2025-04-03
+
 # langchain==0.2.17
 # langchain-community==0.2.19
 # azure-identity==1.19.0
