--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -11,11 +11,11 @@ pydantic==2.10.6
 pydantic-settings==2.8.1
 
 langchain==0.2.17
-langchain-community
+# langchain-community
 
 azure-identity==1.21.0
 azure-search-documents==11.5.2
-# chromadb
+chromadb
 litellm==1.65.1
 # sentence-transformers==4.0.1
 # langchain-chroma==0.2.2
