--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,30 +2,19 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
-# 104857600 bytes = 104mb
+# SWA free tier limits the zipped api and app artifacts to be under 104857600
+# bytes = 104MB.
+#
+# All packages are at the latest version available from SWA as of 2025-04-03
 
 azure-functions==1.22.1
-
-# Azure SWA builder's pydantic version is up to 2.10.6 as of 2025-04-03
 pydantic==2.10.6
 pydantic-settings==2.8.1
-
 langchain==0.2.17
-# langchain-community
-
+langchain-community==0.2.19
 azure-identity==1.21.0
 azure-search-documents==11.5.2
-chromadb
 litellm==1.65.1
-# sentence-transformers==4.0.1
-# langchain-chroma==0.2.2
 
-
-# langchain==0.2.17
-# langchain-community==0.2.19
-# azure-identity==1.19.0
-# azure-search-documents==11.4.0
-# chromadb==0.5.23
-# litellm==1.56.6
+# chromadb
 # sentence-transformers==4.0.1
-# langchain-chroma==0.2.2
