--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -12,6 +12,7 @@ pydantic==2.10.6
 pydantic-settings==2.8.1
 langchain==0.2.17
 langchain-community==0.2.19
+langchain-openai
 azure-identity==1.21.0
 azure-search-documents==11.5.2
 litellm==1.65.1
