--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "baseui": "^9.65.3",
     "chart.js": "^2.9.3",
     "gh-pages": "^2.1.1",
+    "i18next": "^17.0.8",
     "node-fetch": "^2.6.0",
     "popup-chat-react": "^1.0.5",
     "prettier-package-json": "^2.1.3",
@@ -24,6 +25,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.10.2",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^10.13.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
