--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^2.9.3",
     "gh-pages": "^2.1.1",
     "i18next": "^17.0.8",
+    "i18next-browser-languagedetector": "^3.1.1",
     "node-fetch": "^2.6.0",
     "popup-chat-react": "^1.0.5",
     "prettier-package-json": "^2.1.3",
