--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "masterPortfolio",
+  "name": "HssWiki",
   "background_color": "#ffffff",
   "display": "standalone",
   "icons": [
@@ -40,7 +40,7 @@
       "density": "4.0"
     }
   ],
-  "short_name": "masterPortfolio",
+  "short_name": "HssWiki",
   "start_url": ".",
   "theme_color": "#000000"
 }
